bug fix, color adjustment

--- a/index.html
+++ b/index.html
@@ -13,15 +13,15 @@
     <header>TIK-TAC-TOE</header>
     <h1 id="msg"></h1>
     <section id="board">
-            <div id="b0"><button id=b></button></div>
-            <div id="b1"><button id=b></button></div>
-            <div id="b2"><button id=b></button></div>
-            <div id="b3"><button id=b></button></div>
-            <div id="b4"><button id=b></button></div>
-            <div id="b5"><button id=b></button></div>
-            <div id="b6"><button id=b></button></div>
-            <div id="b7"><button id=b></button></div>
-            <div id="b8"><button id=b></button></div>
+            <div id="b0"></div>
+            <div id="b1"></div>
+            <div id="b2"></div>
+            <div id="b3"></div>
+            <div id="b4"></div>
+            <div id="b5"></div>
+            <div id="b6"></div>
+            <div id="b7"></div>
+            <div id="b8"></div>
     </section>
     <button id="pa">PLAY AGAIN</button>
 <body>
